--- a/checkout.html
+++ b/checkout.html
@@ -194,14 +194,14 @@
         </div>
     </footer>
 
-
+    <script src="https://accounts.google.com/gsi/client?onload=initializeGoogleSignIn" async defer></script>
     <script src="js/keranjang.js"></script>
     <script src="js/payment-methods.js"></script>  
     <script src="js/checkout.js"></script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 </body>
 </html>
+
 
 
 
