--- a/view.html
+++ b/view.html
@@ -78,6 +78,19 @@
                     <p class="text-lg text-gray-600 mt-2">Temukan semua aset digital yang Anda butuhkan di sini.</p>
                 </div>
 
+                <div class="flex flex-col sm:flex-row justify-center items-center mb-8 gap-4">
+                    <input id="search-input" type="text" placeholder="Cari nama produk..." 
+                           class="w-full sm:w-72 pl-4 pr-4 py-3 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500">
+                    <button id="refresh-btn" 
+                            class="flex items-center justify-center gap-2 bg-white text-gray-700 border border-gray-300 px-5 py-3 rounded-lg font-semibold hover:bg-gray-50 transition shadow-sm w-full sm:w-auto">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5M20 20v-5h-5M4 4l1.5 1.5A9 9 0 0120.5 16l-1.5-1.5" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M20 20l-1.5-1.5A9 9 0 003.5 8l1.5 1.5" />
+                        </svg>
+                        <span>Segarkan</span>
+                    </button>
+                </div>
+                
                 <div class="flex justify-center flex-wrap gap-3 mb-12">
                     <button class="filter-btn active py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="all">Semua</button>
                     <button class="filter-btn py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="tools">Tools</button>
@@ -170,5 +183,6 @@
 
 </body>
 </html>
+
 
 
