--- a/view.html
+++ b/view.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
                 
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
