--- a/keranjang.html
+++ b/keranjang.html
@@ -23,7 +23,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
                 <div class="flex items-center gap-4">
@@ -118,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
