--- a/view.html
+++ b/view.html
@@ -16,6 +16,49 @@
     <style>
         body { font-family: 'Poppins', sans-serif; background-color: #FFFFFF; color: #1F2937; }
         .filter-btn.active { background-color: #4F46E5; color: #FFFFFF; border-color: #4F46E5; }
+        .text-gradient {
+            background-image: linear-gradient(90deg, #4F46E5, #3B82F6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-fill-color: transparent;
+        }
+        .section-bg-glow {
+            position: relative;
+            overflow: hidden;
+        }
+        .section-bg-glow::before {
+            content: '';
+            position: absolute;
+            top: -50%; 
+            left: -50%; 
+            width: 200%; 
+            height: 200%;
+            background-image: 
+                radial-gradient(circle at 20% 30%, rgba(79, 70, 229, 0.08) 0%, transparent 40%),
+                radial-gradient(circle at 80% 70%, rgba(59, 130, 246, 0.08) 0%, transparent 40%);
+            animation: rotate-glow 25s linear infinite;
+            z-index: 0;
+        }
+        @keyframes rotate-glow { 
+            from { transform: rotate(0deg); } 
+            to { transform: rotate(360deg); } 
+        }
+        .reveal {
+            opacity: 0;
+            transform: translateY(40px);
+            transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+        }
+        .reveal.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        #video-modal-overlay {
+            transition: opacity 0.3s ease-in-out;
+        }
+        #video-modal-content {
+            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -70,6 +113,19 @@
     </header>
 
     <main>
+
+
+        <section class="min-h-screen flex items-center justify-center text-center overflow-hidden bg-white section-bg-glow">
+            <div class="container mx-auto px-6 z-10">
+                <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 leading-tight mb-4">
+                    Aset Digital untuk <span class="text-gradient">Para Visioner.</span>
+                </h1>
+                <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto mb-8">
+                    Setiap produk dari S-Tools ID dirancang untuk memberikan Anda keunggulan. Jelajahi alat-alat yang akan mendefinisikan ulang cara Anda bekerja.
+                </p>
+            </div>
+        </section>
+        
         <!-- Product Catalog Section -->
         <section id="produk-list" class="py-16 md:py-24">
             <div class="container mx-auto px-6">
@@ -104,6 +160,27 @@
                 </div>
             </div>
         </section>
+
+        <section class="py-24 bg-white">
+            <div class="container mx-auto px-6 max-w-4xl reveal">
+                <h2 class="text-center text-3xl font-bold text-gray-900 mb-12">Pertanyaan yang Sering Muncul</h2>
+                <div class="space-y-8">
+                    <div class="border-b border-gray-200 pb-4">
+                        <h3 class="font-semibold text-lg text-gray-800">Bagaimana saya menerima produk setelah pembelian?</h3>
+                        <p class="text-gray-600 mt-2">Setelah pembayaran berhasil, Anda akan langsung menerima email berisi link unduhan atau akses ke platform, tergantung produk yang Anda beli.</p>
+                    </div>
+                    <div class="border-b border-gray-200 pb-4">
+                        <h3 class="font-semibold text-lg text-gray-800">Apakah ada dukungan teknis?</h3>
+                        <p class="text-gray-600 mt-2">Tentu. Semua produk pembelian satu kali mendapatkan dukungan via email selama 30 hari. Produk langganan mendapatkan dukungan prioritas selama masa langganan aktif.</p>
+                    </div>
+                    <div>
+                        <h3 class="font-semibold text-lg text-gray-800">Bisakah saya mendapatkan refund?</h3>
+                        <p class="text-gray-600 mt-2">Karena sifat produk digital, kami tidak menawarkan pengembalian dana. Namun, jika Anda mengalami masalah teknis yang tidak bisa kami selesaikan, kami akan meninjau kasus Anda secara individual.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <!-- Footer -->
@@ -183,6 +260,7 @@
 
 </body>
 </html>
+
 
 
 
