--- a/view.html
+++ b/view.html
@@ -123,6 +123,9 @@
                 <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                     Setiap produk dari S-Tools ID dirancang untuk memberikan Anda keunggulan. Jelajahi alat-alat yang akan mendefinisikan ulang cara Anda bekerja.
                 </p>
+                <a href="#produk-list" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white font-bold py-3 px-8 rounded-full text-lg transition-all transform hover:scale-105 shadow-lg shadow-blue-500/30">
+                    Jelajahi Produk
+                </a>
             </div>
         </section>
         
@@ -240,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
