--- a/transfer.html
+++ b/transfer.html
@@ -28,10 +28,10 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
-                <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold">
+                <a href="https://s-tools.id/produk/" class="text-gray-600 hover:text-indigo-600 font-semibold">
                     Kembali &rarr;
                 </a>
             </div>
@@ -206,6 +206,7 @@
     </script>
 </body>
 </html>
+
 
 
 
