--- a/invoice.html
+++ b/invoice.html
@@ -86,7 +86,7 @@
 
             <header class="flex justify-between items-start mb-10">
                 <div>
-                    <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-10 w-auto mb-2">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo" class="h-10 w-auto mb-2">
                     <h1 class="text-2xl font-bold text-gray-900">S-Tools ID</h1>
                     <p class="text-gray-500">Raihan Sweet Home B13, Maros, Indonesia</p>
                 </div>
@@ -299,4 +299,5 @@
     </script>
 </body>
 </html>
+
 
