--- a/checkout.html
+++ b/checkout.html
@@ -37,7 +37,7 @@
                     <span>S-Tools ID</span>
                 </a>
                 <div class="flex items-center gap-4">
-                    <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
+                    <a href="https://s-tools.id/produk/" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
                         &larr; Lanjut Belanja
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                     <ul class="space-y-3">
                         <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="https://s-tools.id/produk/" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
                 <div>
@@ -201,6 +201,7 @@
 
 </body>
 </html>
+
 
 
 
