--- a/view.html
+++ b/view.html
@@ -76,7 +76,7 @@
                     <nav class="flex items-center space-x-8">
                         <a href="/#tentang" class="text-gray-600 hover:text-indigo-600 transition-colors">Tentang</a>
                         <a href="/#layanan" class="text-gray-600 hover:text-indigo-600 transition-colors">Layanan</a>
-                        <a href="view.html" class="text-indigo-600 font-semibold">Produk</a>
+                        <a href="#" class="text-indigo-600 font-semibold">Produk</a>
                         <a href="/#kontak" class="text-gray-600 hover:text-indigo-600 transition-colors">Kontak</a>
                     </nav>
                     <a href="keranjang.html" class="relative text-gray-600 hover:text-indigo-600">
@@ -186,7 +186,7 @@
                     <ul class="space-y-3">
                         <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="https://s-tools.id/produk/" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
 
@@ -243,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
