--- a/keranjang.html
+++ b/keranjang.html
@@ -27,7 +27,7 @@
                     <span>S-Tools ID</span>
                 </a>
                 <div class="flex items-center gap-4">
-                    <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
+                    <a href="https://s-tools.id/produk/" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
                         &larr; Lanjut Belanja
                     </a>
                 </div>
@@ -70,7 +70,7 @@
                     <ul class="space-y-3">
                         <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="https://s-tools.id/produk/" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
 
@@ -118,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
