--- a/checkout.html
+++ b/checkout.html
@@ -218,10 +218,11 @@
     <script src="js/payment-methods.js"></script>  
     <script src="js/checkout.js"></script>
 
-    <script async defer src="https://accounts.google.com/gsi/client?onload=onGoogleLibraryLoad"></script>
+    <script src="https://accounts.google.com/gsi/client?onload=initializeGoogleSignIn" async defer></script>
 
 </body>
 </html>
+
 
 
 
