--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+    <script src="https://www.google.com/recaptcha/api.js?render=6Lffu7IrAAAAAN2uSiFZrk8ft2mLqpq9oH2-1GFD"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
@@ -220,5 +221,6 @@
 
 </body>
 </html>
+
 
 
