--- a/transfer.html
+++ b/transfer.html
@@ -125,7 +125,7 @@
     </footer>
 
     <script>
-        const API_URL = 'https://api.senrima.web.id'; // Ganti dengan URL Web App Anda
+        const API_URL = 'https://api.s-tools.id'; // Ganti dengan URL Web App Anda
 
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -206,6 +206,7 @@
     </script>
 </body>
 </html>
+
 
 
 
