--- a/transfer.html
+++ b/transfer.html
@@ -46,7 +46,7 @@
                 <div class="max-w-lg mx-auto bg-white p-8 md:p-10 rounded-2xl border border-gray-200 shadow-lg">
                     <div class="text-center mb-8">
                         <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Selesaikan Pembayaran</h1>
-                        <p class="text-gray-600 mt-2">Silakan lakukan transfer bank ke rekening serta sesuai dengan nominal transfer yang tertera di bawah ini.</p>
+                        <p class="text-gray-600 mt-2">Silakan lakukan transfer bank ke rekening tertera serta sesuai dengan nominal transfer yang tertera di bawah ini.</p>
                     </div>
 
                     <!-- Loading Skeleton -->
@@ -206,6 +206,7 @@
     </script>
 </body>
 </html>
+
 
 
 
