--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div id="mobile-menu" class="hidden md:hidden mt-4">
                 <a href="/#tentang" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Tentang</a>
                 <a href="/#layanan" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Layanan</a>
-                <a href="view.html" class="block py-2 px-4 text-indigo-600 bg-gray-100 rounded-lg font-semibold">Produk</a>
+                <a href="#" class="block py-2 px-4 text-indigo-600 bg-gray-100 rounded-lg font-semibold">Produk</a>
                 <a href="/#kontak" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Kontak</a>
                 <a href="https://s-tools.id/app/" class="block text-center mt-4 bg-gradient-to-r from-indigo-600 to-blue-500 text-white px-5 py-2.5 rounded-lg font-semibold hover:opacity-90 w-full">
                     Akses
@@ -156,6 +156,7 @@
                     <button class="filter-btn py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="ebook">Ebook</button>
                     <button class="filter-btn py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="tutorial">Tutorial</button>
                     <button class="filter-btn py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="aset">File Aset</button>
+                    <button class="filter-btn py-2 px-5 rounded-full border border-gray-300 font-semibold transition-colors" data-filter="prompt">Prompt AI</button>
                 </div>
                 
                 <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
@@ -243,6 +244,7 @@
 
 </body>
 </html>
+
 
 
 
