--- a/invoice.html
+++ b/invoice.html
@@ -182,7 +182,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://api.senrima.web.id';
+        const API_URL = 'https://api.s-tools.id';
 
         const formatCurrency = (amount) => new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(amount);
 
@@ -299,5 +299,6 @@
     </script>
 </body>
 </html>
+
 
 
