--- a/checkout.html
+++ b/checkout.html
@@ -107,7 +107,7 @@
                                         </div>
                                         <div>
                                             <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Alamat Email</label>
-                                            <input type="email" id="email" class="w-full px-4 py-3 rounded-lg border border-gray-300" placeholder="email@anda.com" required>
+                                            <input type="email" id="email" autocomplete="email" class="w-full px-4 py-3 rounded-lg border border-gray-300" placeholder="email@anda.com" required>
                                         </div>
                                         <button type="button" id="send-token-btn" class="w-full bg-indigo-600 text-white font-semibold py-3 rounded-lg hover:bg-indigo-700 flex items-center justify-center">Kirim OTP ke Email</button>
 
@@ -221,6 +221,7 @@
 
 </body>
 </html>
+
 
 
 
