--- a/redeem-tiktok.html
+++ b/redeem-tiktok.html
@@ -15,16 +15,13 @@
 </head>
 <body class="bg-gray-50" x-data="redeemApp()">
     
-    <header class="bg-white shadow-sm">
-        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
-                <img class="h-8 w-auto" src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo">
-            </div>
-        </div>
-    </header>
-
     <main>
         <div class="max-w-xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+
+            <a href="https://s-tools.id/" class="inline-block mb-8">
+                <img class="h-10 w-auto" src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo">
+            </a>
+            
             <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Dapatkan Kode Klaim</h1>
             <p class="mt-4 text-lg leading-6 text-gray-500">Masukkan URL video TikTok dan alamat email Anda untuk mendapatkan kode klaim unik.</p>
 
@@ -121,4 +118,5 @@
         }
     </script>
 </body>
+
 </html>
