--- a/redeem-tiktok.html
+++ b/redeem-tiktok.html
@@ -22,7 +22,7 @@
                 <img class="h-14 w-auto" src="https://s-tools.id/aset/stools_logo.png" alt="S-Tools ID Logo">
             </a>
             
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Dapatkan Kode Klaim</h1>
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Dapatkan Kode Klaim Tiktok</h1>
             <p class="mt-4 text-lg leading-6 text-gray-500">Masukkan URL video TikTok dan alamat email Anda untuk mendapatkan kode klaim unik.</p>
 
             <div class="mt-8 w-full">
@@ -120,4 +120,5 @@
 </body>
 
 </html>
+
 
